# hope-clean

./: .flake8  .gitignore  agent.md  missing_imports.py  missing_imports_output.txt  pyproject.toml  requirements.txt  requirements.txt.txt  settings.json  user_settings.json
data/: ai_patterns.json
dev_docs/: Blueprint_ Advanced Content Generation Workflow.md  Pre-Generation Planning Research Questions_.md  Repository Investigation- 11 July 2025.md  kivy content generation App Mock Python code..txt
prompts/: generation_prompt.txt  plan_critique_prompt.txt  plan_refine_prompt.txt  planning_prompt.txt
showup_editor_ui/: __init__.py  launch_modular_editor.bat
showup_tools/: __init__.py  ai_detector.py  constants.py  content_generator.py  content_reviewer.py  csv_processor.py  fix_core_imports.py  output_manager.py  planning_stage.py  refinement_stage.py  run_simplified_app.bat  simplified_app.py  workflow.py
simplified_workflow/: SETTINGS.md  __init__.py  ai_detector.py.bak  ai_detector.py.bak2  content_comparator.py  content_comparator.py.bak  content_comparator.py.bak2  content_generator.py  content_generator.py.bak  content_generator.py.bak2  content_reviewer.py.bak  content_reviewer.py.bak2  context_builder.py  template_loader.py  workflow BACKUP.py  workflow BACKUP.py.bak  workflow BACKUP.py.bak2  workflow.py  workflow.py.bak  workflow.py.bak2
tests/: test_ai_detection_stage.py  test_async_parallel_generation.py  test_claude_modules.py  test_generation_stage.py  test_planning_stage.py  test_rag_integration_import.py  test_refinement_stage.py  (+1 more)
(+92 files in other folders)
